# DexRewrite

./: CMakeLists.txt  readme.md
include/base/: logging.h
include/dex/: dex_container.h  dex_ir_annotation.h  dex_ir_classdata.h  dex_ir_collectionvector.h  dex_ir_debuginfo_item.h  dex_ir_fieid_item.h  dex_ir_method_item.h  dex_ir_try_item.h  dex_ir_typeaddr_pair.h  dex_ir_typelist.h  dex_stringpiece.h
include/util/: memory_scan.h  proccess_status.h
src/libdex/: dex_ir_builder.cpp  dex_ir_util.cpp  dex_utils.h
src/libutil/: fd_file.cpp  memory_scan.cpp  proccess_status.cpp
